--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <h1>top heading</h1>
   <div id="root">
-    <h1>I am ajnas</h1>
+    <h1>React not rendering</h1>
   </div>
 <h1>bottom heading</h1>
   <!-- Create Hello World Program using only JavaScript? -->
@@ -27,8 +27,8 @@
     root.appendChild(heading);
   </script> -->
 
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+  <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script> -->
 
 
   
@@ -50,7 +50,7 @@ root.render(heading)
   </div>
 </div> -->
  
-<script src="./app.js"></script>
+<script type="module" src="./app.js"></script>
   
 
   
