--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nameste React</title>
  <link rel="stylesheet" href="./style.css">
+ <script src="https://kit.fontawesome.com/b92a467578.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-  <h1>top heading</h1>
+  <!-- <h1>top heading</h1> -->
   <div id="root">
     <h1>React not rendering</h1>
   </div>
-<h1>bottom heading</h1>
+   <!-- <h1>bottom heading</h1> -->
   <!-- Create Hello World Program using only JavaScript? -->
 
 
@@ -50,7 +51,7 @@ root.render(heading)
   </div>
 </div> -->
  
-<script type="module" src="./app.js"></script>
+<script type="module" src="./src/app.js"></script>
   
 
   
